--- a/TranslationMod/languages/RU/dictionaries/_GameQuests.json
+++ b/TranslationMod/languages/RU/dictionaries/_GameQuests.json
@@ -162,7 +162,7 @@
     "@key Is that the @key I requested? @key$h#$b# @key": "",
     "@key @key @key$h#$b# @key": "",
     "Oh!": "",
-    "Hey!": "",
+    "Hey!": "Привет!",
     "Hello @player": "",
     "You brought me the item I asked for!": "",
     "So you saw the bulletin I posted?": "",
