--- a/TranslationMod/languages/RU/dictionaries/_Menus.json
+++ b/TranslationMod/languages/RU/dictionaries/_Menus.json
@@ -97,7 +97,8 @@
     "$ @number g enclosed": "",
     "New @key recipe:": "",
     "'@key'": "'@key'",
-    "Level @number @newline  @number": "Уровень @key @newline  @number",
+    "Level @number @key": "Уровень @number @key",
+    "Level @number @newline  @number": "Уровень @number @newline  @number",
     "+1 Watering Can Proficiency": "+1 к владению Лейкой",
     "+1 Hoe Proficiency": "+1 к владению Мотыгой",
     "+1 Fishing Rod Proficieny": "+1 к владению Удочкой",
@@ -141,8 +142,8 @@
     "Cooldown on special moves cut in half.": "",
     "Critical strikes are deadly.": "",
     "Choose a profession:": "Выберите профессию:",
-    "New cooking recipe: @key": "",
-    "New crafting recipe: @key": "",
+    "New cooking recipe: @key": "Новый рецепт приготовления: @key",
+    "New crafting recipe: @key": "Новый рецепт крафта: @key",
     "No Saved Games Found": "Сохраненные игры не найдены",
     "Delete File":"Удалить файл",
     "Really delete file: @key?": "Точно удалить файл: @key?",
