--- a/TranslationMod/languages/RU/dictionaries/Festivals.json
+++ b/TranslationMod/languages/RU/dictionaries/Festivals.json
@@ -181,7 +181,7 @@
 		"You know what? I admit it... I really like flowers!": "Знаешь? Я признаюсь... Я действительно люблю цветы!",
 		"Hi @. Glad to see you here.": "Привет @. Рад видеть тебя здесь.",
 		"Mmm... excellent sauce. *slurp*": "М-м-м... отличный соус. *сёрбает*",
-		"Ah, this green stuff is spicy! *munch*{": "Оу, а салат острый! *munch*{",
+		"Ah, this green stuff is spicy! *munch*": "Оу, а салат острый! *munch*",
 		"*crunch* ...ow.": "*хрум-хрум* ...оу.",
 		"*sigh*... Love is in the air... And I'm still single.": "*вздох*... Воздух пронизан любовью... А я всё так же одинока.",
 		"I wore my best shirt for the dance... This sort of thing doesn't happen very often!": "На танец я одел свою лучшую рубашку... А это не так уж часто бывает!",
@@ -219,7 +219,7 @@
 		"Yuck. Someone must have ruined it with a poor-quality ingredient.": "Фу. Кто-то испортил похлёбку некачественным продуктом.",
 		"Well... does anyone want any?": "Что ж... кто хочет попробовать?",
 		"The soup wasn't very good, but otherwise the Luau was a success!": "Похлёбка была так себе, но Люау, в общем, удался!",
-		"Blech! This is vile! I think I'm going to be sick... ": "Что за... отвратительная гадость! Кажется, меня сейчас стошнит... ",
+		"Blech! This is vile! I think I'm going to be sick...": "Что за... отвратительная гадость! Кажется, меня сейчас стошнит...",
 		"I need to lie down...": "Ох нет, я лучше прилягу...",
 		"Good going, people... Whoever put that foul ingredient in the soup made the Governor pass out! I'm ashamed.": "Поздравляю, народ... Кто бы из вас не положил в похлёбку отраву, но результат на лицо - у губернатора несварение!Ох, какой позор...",
 		"Go home, the festival is over.": "Расходитесь, праздник окончен.",
@@ -330,7 +330,7 @@
 		"You know what? I probably should've worn a jacket.": "Знаешь, что? Наверное, надо было надеть куртку.",
 		"I'm not very creative when it comes to snowmen.": "Я не очень творческий, когда дело доходит до снеговика.",
 		"Cold? Nah, I never get cold.": "Холодно? Нет, я не когда не мерзну.",
-		"This snow is so cold I can't feel my fingers anymore...": "Этот снег такой холодный, что я не чувствую своих пальцев... ",
+		"This snow is so cold I can't feel my fingers anymore...": "Этот снег такой холодный, что я не чувствую своих пальцев...",
 		"I've met some people who believe in spirits, and magic... but me? I've never seen anything that couldn't be explained by science.": "Я встречал людей которые верят в духов и магию... но я? Я не когда не видел то, что не могла объяснить наука.",
 		"How's winter coming along for you, @?": "Ну как тебе зима, @?",
 		"Igloo-building's an art I picked up from the tundra dwellers who live beyond the frozen sea.": "Искусству строить иглу меня обучили коренные жители тундры, что обитают на берегах ледяного моря.",
@@ -341,7 +341,7 @@
 		"Did I ever tell you how George and I first met? He actually pelted me with a snowball in this very festival.": "Я не рассказывала, как мы с Джорджем познакомились? А ведь он попал в меня снежком вот на таком же празднике.",
 		"He was a gentleman back then, and came over to see if I was okay.": "И, как настоящий джентельмен, подбежал узнать, всё ли со мной в порядке.",
 		"Welcome to the Festival of Ice!": "Добро пожаловать на Ледяной праздник!",
-		"The highlight of today's festival is the ice fishing competition. We set up this 'frozen lake' and stocked it full of fish.{": "TГлавное событие сегодня - состязание в подлёдной рыбалке. Мы организовали небольшое замёрзшее озеро и запустили туда тучу рыбы.{",
+		"The highlight of today's festival is the ice fishing competition. We set up this 'frozen lake' and stocked it full of fish.": "TГлавное событие сегодня - состязание в подлёдной рыбалке. Мы организовали небольшое замёрзшее озеро и запустили туда тучу рыбы.",
 		"Just let me know when you're ready to compete.": "Скажи, когда надумаешь поучаствовать.",
 		"Emily starting helping me without any provocation... does that mean something? *gulp*": "Эмили просто пришла и стала мне помогать... как думаешь, это намёк?",
 		"Wow, this snowman needs a makeover. Who made this?": "Вау, этому снеговику нужен макияж.Кто это сделал?",
