--- a/TranslationMod/languages/RU/dictionaries/schedules.json
+++ b/TranslationMod/languages/RU/dictionaries/schedules.json
@@ -99,7 +99,8 @@
     "Nothing bad to report, Doc. I feel as healthy as ever.": "",
     "Mom seems okay. A little overworked, maybe.": "",
     "Vincent seems a little lonely without me around. I used to play with him a lot.": "",
-    "Nothing like an ice cold Joja Cola on a sopping wet day, huh?##Just kidding. Hehehe.": "",
+    "Nothing like an ice cold Joja Cola on a sopping wet day, huh?":"",
+    "Just kidding. Hehehe.": "",
     "I gotta go visit Uncle Doctor today... Great.": "",
     "I'm a healthy boy, doc. Can I go now? This is boring.": "",
     "I just got out of the doctor's office. Completely healthy and vigorous, just as I expected.": "",
