--- a/TranslationMod/languages/RU/dictionaries/_MiniGames.json
+++ b/TranslationMod/languages/RU/dictionaries/_MiniGames.json
@@ -41,7 +41,7 @@
 	"There will come a day when you feel crushed by the burden of modern life...": "Однажды ты почувствуешь себя разбитым бременем современной жизни...^Однажды ты почувствуешь себя разбитой бременем современной жизни...",
 	"...and your bright spirit will fade before a growing emptiness.": "...и твой яркий дух начнёт угасать перед растущей пустотой.",
 	"When that happens, my boy, you'll be ready for this gift.": "Когда это случится, мой мальчик, ты будешь готов к этому подарку.",
-	"When that happens, my dear, you'll be ready for this gift.": "Когда это случится, моя милая, ты будешь готов к этому подарку.",
+	"When that happens, my dear, you'll be ready for this gift.": "Когда это случится, моя милая, ты будешь готова к этому подарку.",
 	"Now, let Grandpa rest...": "А пока, дай Дедушке отдохнуть...",
 	"XX Years later": "XX лет спустя",
 
