--- a/TranslationMod/languages/RU/dictionaries/_Game1.json
+++ b/TranslationMod/languages/RU/dictionaries/_Game1.json
@@ -1,89 +1,88 @@
 {
-    "__comment": "Game1.cs",
-    "__comment": "samBandName",
-    "The Alfalfas": "",
-    "__comment": "elliottBookName",
-    "Blue Tower": "",
-    "You've learned a new cooking recipe: @key": "",
-    "You've learned how to craft a new item: @key": "",
-    "You found a =stardrop! Your mind is filled with thoughts of  @key. ^^Your maximum energy level has increased.": "",
-    "You found a =stardrop! It's strange, but the taste reminds you of  @key. ^^Your maximum energy level has increased.": "",
-    "You found a =stardrop! You feel an unwavering connection to the valley itself. @key. ^^Your maximum energy level has increased.": "",
-    "You found a =stardrop! Your mind is filled with thoughts of... ConcernedApe? (Well, thanks!) @key. ^^Your maximum energy level has increased.": "",
-    "Stardew Valley has crashed...":"",
-    "Please send the error report or a screenshot of this message to @ConcernedApe. (http://stardewvalley.net/contact/)":"",
-    "Dwarf King":"",
-    "Mr. Lewis": "Мр. Льюис",
-    "How much do you want to bet? (You have @number club coins).":"",
-    "Semitones above C3:":"",
-    "Drum Sound:":"",
-    "Choose song: ": "Выберите песню: ",
-    "How many units of fuel do you want to buy?":"",
-    "How many would you like?":"",
-    "How many would you like to buy?":"",
-    "@number days played.":"",
-    "__comment":"here's key is a festival name",
-    "The @key has begun near Marnie's ranch.":"",
-    "The @key has begun in the forest.":"",
-    "The @key has begun in the town square.":"",
-    "The @key has begun at the beach.":"",
-    "It's getting late...":"",
-    "I'm not thirsty right now...":"",
-    "I'm too full...": "Больше нет мест...",
-    "__comment": "spouse speaks:",
-    "The wedding was wonderful... wasn't it, dear?$h#$e#Well, we can't forget about the farm... time to get to work.":"",
-    "Drink this @key?": "Выпить @keyV?",
-    "Drink a @key?": "Выпить @keyV?",
-    "Drink an @key?": "Выпить @keyV?",
-    "Eat this @key?": "Съесть @keyV?",
-    "Eat a @key?": "Съесть @keyV?",
-    "Eat an @key?": "Съесть @keyV?",
-    "Nothing happens. Sandy said something about 'infusing it with the power of Yoba'.":"",
-    "Place anything you want to sell in here.":"",
-    "Empty the contents of your backpack into the shipping box?":"",
-    "Sun": "Вс",
-    "Mon": "Пн",
-    "Tue": "Вт",
-    "Wed": "Ср",
-    "Thu": "Чт",
-    "Fri": "Пт",
-    "Sat": "Сб",
-    "Sunday":"",
-    "Monday":"",
-    "Tuesday":"",
-    "Wednesday":"",
-    "Thursday":"",
-    "Friday":"",
-    "Saturday":"",
-    "You have @number club coins.":"",
-    "Play Again": "Играть снова",
-    "Leave":"",
-    "JACKPOT WINNER!! You win @number Club Coins.":"",
-    " You win @number Club Coins.":"",
-    "You don't have enough money to buy that.":"",
-    "Gamepad mode activated":"",
-    "Gamepad disconnected":"",
-    "Screenshot mode activated. Press 'F4' to exit.":"",
-    "Next stop: Stardew Valley.": "Следующая остановка: Долина Стардью.",
-    "Next stop: Calico Desert.": "Следующая остановка: Пустыня Калико.",
-    "...@player?":"",
-    "__comment":"donnow if it used or not",
-    "X or Left Click - Advance Dialogue":"",
-    "X or Left Click - Select": "X или ЛКМ - Выбрать",
-    "C or Right Click - Cancel":"",
-    "X or Left Click - Grab | Use": "X или ЛКМ - Взять | Использовать",
-    " @newline C or Right Click - Use @key": "C или ПКМ - Использовать @key",
-    " @newline E, F, or Mouse Mid. - Remove Item From Backpack":"",
-    " @newline Q or Enter - Open Menu":"",
-    " @newline Shift - Run/Walk":"",
-    "X or Left Click - Drop Item": "X или ЛКМ - Выбросить предмет",
-    " @newline C or Right Click - Use Item": "C или ПКМ - Использовать предмет",
-    " @newline E, F or Mouse Mid. - Store Item":"",
-    " @newline Z or Mouse Wheel - Switch Item":"",
-    " @newline Q or Enter - Open Menu": "Q или Enter - Открыть меню",
-    " @newline Shift - Run/Walk": "Shift - Бежать/Ходить",
-    "Today's festival is being set up. Come back later.": "Сегодняшний праздник еще готовится. Возвращайся позже",
-	"__comment":"key is server name, no need to translate",
-    "Connecting to @key...": "",
-    "Melting Winter Snow...":""
+  "__comment Game1.cs": "__comment Game1.cs",
+  "__comment samBandName": "__comment samBandName",
+  "The Alfalfas": "Дети травы",
+  "__comment elliottBookName": "__comment elliottBookName",
+  "Blue Tower": "Голубая башня",
+  "You've learned a new cooking recipe: @key": "Вы научились готовить новое блюдо: @key",
+  "You've learned how to craft a new item: @key": "Вы научились делать новый предмет: @key",
+  "You found a =stardrop! Your mind is filled with thoughts of  @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Ваш разум забит мыслями о  @keyP. ^^Ваш максимальный уровень энергии увеличился.",
+  "You found a =stardrop! It's strange, but the taste reminds you of  @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Странно, но вкус напоминает вам о @keyP. ^^Ваш максимальный уровень энергии увеличился.",
+  "You found a =stardrop! You feel an unwavering connection to the valley itself. @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Вы чувствуете непоколебимую связь с самой долиной. @key. ^^Ваш максимальный уровень энергии увеличился.",
+  "You found a =stardrop! Your mind is filled with thoughts of... ConcernedApe? (Well, thanks!) @key. ^^Your maximum energy level has increased.": "Вы нашли =стардроп! Ваш разум забит мыслями о... ConcernedApe? (Что ж, Спасибо!) @key. ^^Ваш максимальный уровень энергии увеличился.",
+  "Stardew Valley has crashed...": "Стардью Вэлли сломалась...",
+  "Please send the error report or a screenshot of this message to @ConcernedApe. (http://stardewvalley.net/contact/)": "Пожалуйста, отправьте отчет об ошибке или скриншот этого сообщения на @ConcernedApe. (http://stardewvalley.net/contact/)",
+  "Dwarf King": "Король гномов",
+  "Mr. Lewis": "Г-н Льюис",
+  "How much do you want to bet? (You have @number club coins).": "Сколько хотите поставить? (У вас @number клубных монет).",
+  "Semitones above C3:": "Полутона выше C3:",
+  "Drum Sound:": "Звук барабана:",
+  "Choose song:": "Выберите песню: ",
+  "How many units of fuel do you want to buy?": "Сколько единиц топлива ты хочешь купить?",
+  "How many would you like?": "Сколько бы ты хотел?",
+  "How many would you like to buy?": "Сколько бы ты хотел купить?",
+  "@number days played.": "Дней в игре: @number",
+  "__comment here's key is a festival name": "__comment here's key is a festival name",
+  "The @key has begun near Marnie's ranch.": "У Марни на ранчо начался @key.",
+  "The @key has begun in the forest.": "В лесу начался @key.",
+  "The @key has begun in the town square.": "На городской площади проходит @key.",
+  "The @key has begun at the beach.": "На пляже начался @key.",
+  "It's getting late...": "Уже поздно...",
+  "I'm not thirsty right now...": "Сейчас я пить не хочу...",
+  "I'm too full...": "Мне больше не лезет...",
+  "__comment spouse speaks:": "__comment spouse speaks:",
+  "The wedding was wonderful... wasn't it, dear?": "Свадьба прошла прекрасно... не так ли, дорогой?^Свадьба прошла прекрасно... не так ли, дорогая?",
+  "Well, we can't forget about the farm... time to get to work.": "Что ж, нельзя забывать о ферме... пора за работу.",
+  "Drink this @key?": "Выпить @keyV?",
+  "Drink a @key?": "Выпить @keyV?",
+  "Drink an @key?": "Выпить @keyV?",
+  "Eat this @key?": "Съесть @keyV?",
+  "Eat a @key?": "Съесть @keyV?",
+  "Eat an @key?": "Съесть @keyV?",
+  "Nothing happens. Sandy said something about 'infusing it with the power of Yoba'.": "Ничего не произошло. Сэнди говорила что-то вроде 'заряди его силой Йобы'.",
+  "Place anything you want to sell in here.": "Положите сюда всё, что хотите продать.",
+  "Empty the contents of your backpack into the shipping box?": "Перенести содержимое вашего рюкзака в ящик продажи?",
+  "Sun": "Вс",
+  "Mon": "Пн",
+  "Tue": "Вт",
+  "Wed": "Ср",
+  "Thu": "Чт",
+  "Fri": "Пт",
+  "Sat": "Сб",
+  "Sunday": "Воскресенье",
+  "Monday": "Понедельник",
+  "Tuesday": "Вторник",
+  "Wednesday": "Среда",
+  "Thursday": "Четверг",
+  "Friday": "Пятница",
+  "Saturday": "Суббота",
+  "You have @number club coins.": "Ваши клубные монеты: @number",
+  "Play Again": "Играть снова",
+  "Leave": "Покинуть",
+  "JACKPOT WINNER!! You win @number Club Coins.": "ДЖЕКПОТ СОРВАН!!! Вы выиграли @number клубных монет.",
+  "You win @number Club Coins.": "Вы выиграли @number клубных монет.",
+  "You don't have enough money to buy that.": "У вас не хватает денег на эту покупку.",
+  "Gamepad mode activated": "Режим геймпада активирован",
+  "Gamepad disconnected": "Геймпад отключен",
+  "Screenshot mode activated. Press 'F4' to exit.": "Режим скриншота активирован. Для выхода нажмите 'F4'.",
+  "Next stop: Stardew Valley.": "Следующая остановка: Долина Стардью.",
+  "Next stop: Calico Desert.": "Следующая остановка: Пустыня Калико.",
+  "...@player?": "..@player?",
+  "__comment dont know if it used or not": "__comment dont know if it used or not",
+  "X or Left Click - Advance Dialogue": "X или Левый клик -  Выбор диалога",
+  "X or Left Click - Select": "X или ЛКМ - Выбрать",
+  "C or Right Click - Cancel": "C или Правый клик - Отмена",
+  "X or Left Click - Grab | Use": "X или ЛКМ - Взять | Использовать",
+  "@newline C or Right Click - Use @key": "@newline C или Правый клик - Использовать предмет",
+  "@newline E, F, or Mouse Mid. - Remove Item From Backpack": "@newline E, F или Нажатие на колесо мыши. - Продать предмет",
+  "@newline Q or Enter - Open Menu": "@newline Q или Enter - Открыть меню",
+  "@newline Shift - Run/Walk": "@newline Shift - Бег/Ходьба",
+  "X or Left Click - Drop Item": "X или ЛКМ - Выбросить предмет",
+  "@newline C or Right Click - Use Item": "@newline C или Правый клик - Использовать предмет",
+  "@newline E, F or Mouse Mid. - Store Item": "@newline E, F или Нажатие на колесо мыши. - Продать предмет",
+  "@newline Z or Mouse Wheel - Switch Item": "@newline Z или Колесико мыши - Переключить предмет",
+  "Today's festival is being set up. Come back later.": "Сегодняшний праздник еще готовится. Возвращайся позже",
+  "__comment key is server name, no need to translate": "__comment key is server name, no need to translate",
+  "Connecting to @key...": "Подключение  к @key..",
+  "Melting Winter Snow...": "Таит зимний снег..."
 }
