Fix missing strings

--- a/TranslationMod/languages/RU/dictionaries/_Events.json
+++ b/TranslationMod/languages/RU/dictionaries/_Events.json
@@ -131,6 +131,8 @@
   "__comment": "MISTAKE KEY FEMALE",
   "@key Farm has never looked better. It's an honor to the family name.": "",
   "Grandpa is pleased.": "Дедушка рад.",
+  "I'm so proud of you, my boy!": "Я так тобой горжусь, мальчик мой!",
+  "I'm so proud of you, my dear!": "Я так горжусь тобой, моя дорогая!",
   "__comment": "MISTAKE KEY FEMALE",
   "You've really turned the place around since we last spoke!": "",
   "__comment": "MISTAKE KEY FEMALE",
