--- a/TranslationMod/languages/RU/dictionaries/_Locations.json
+++ b/TranslationMod/languages/RU/dictionaries/_Locations.json
@@ -2,6 +2,16 @@
   "__comment": "MISTAKE KEY FEMALE",
   "--Monster Eradication Goals--^": "",
   "Help us keep the valley safe.": "Помоги нам сохранить долину в безопасности.",
+  "@number Slimes *^": "@number Слаймов *^",
+  "@number/1000 Slimes^": "@number/1000 Слаймов^",
+  "@number Void Spirits *^": "@number Душы пустоты *^",
+  "@number/150 Void Spirits^": "@number/150 Душ пустоты^",
+  "@number Bats *^": "@number Летучих мышей *^",
+  "@number/200 Bats^": "@number/200 Летучих мышей^",
+  "@number Skeletons *^": "@number Скелетов *^",
+  "@number/50 Skeletons^": "@number/50 Скелетов^",
+  "@number Cave Insects *^": "@number Пещерных насекомых *^",
+  "@number/125 Cave Insects^": "@number/125 Пещерных насекомых^",
   "__comment": "MISTAKE KEY FEMALE",
   "@number Duggies *^": "",
   "__comment": "MISTAKE KEY FEMALE",
@@ -10,10 +20,12 @@
   "@number Dust Sprites *^": "",
   "__comment": "MISTAKE KEY FEMALE",
   "@number/500 Dust Sprites^": "",
+  "^  -See Gil to claim your rewards.": "^  -За наградой обращайтесь к Гилу.",
   "...*snore*...": "...*храп*...",
   "...Come back when you've got something to show me, kid": "...Возвращайся, когда будет, что показать мне малыш.",
   "Use 300 pieces of wood to fix the bridge?": "Использовать 300 дерева, чтобы починить мост?",
   "Hmmm... With 300 pieces of wood this could be fixed.": "Хм... 300 единиц дерева хватит , чтобы это починить.",
+  "Gone fishing.^^   I'll be back tomorrow.": "Отправился на рыбалку.^^Вернусь завтра.",
   "__comment": "MISTAKE KEY FEMALE",
   "Old Mariner: Glad the amulet worked out for ye, lad.": "",
   "__comment": "MISTAKE KEY FEMALE",
