--- a/TranslationMod/languages/RU/dictionaries/_Events.json
+++ b/TranslationMod/languages/RU/dictionaries/_Events.json
@@ -161,11 +161,9 @@
   "@key, with @number big, slimy fish!": "@key, с @number большой, скользкой рыбы!",
   "Well, here goes nothing...": "Ну, здесь не чего не выйдет...",
   "Hey, good luck.": "Привет, удачи.",
-  "__comment": "MISTAKE KEY FEMALE",
-  "I don't have high hopes of winning... the fish look nice but they don't exactly smell great...$s": "",
+  "I don't have high hopes of winning... the fish look nice but they don't exactly smell great...": "Я не особо надеюсь на победу... Рыбы выглядят классно, но вот запах у них не такой классный...",
   "I can't believe I lost...": "Я не могу поверить, что я потерял...",
-  "__comment": "MISTAKE KEY FEMALE",
-  "It feels great to be on top! Hah!": "",
+  "It feels great to be on top! Hah!": "Классно быть на высоте! Хах!",
   "Nice effort, though.": "Хорошая попытка.",
   "__comment": "MISTAKE KEY FEMALE",
   "Well, I didn't win... but it was still satisfying to share all my hard work!": "",
@@ -175,30 +173,19 @@
   "You added an @key to the soup.": "Вы добавили @keyV в суп.",
   "@key added a @key to the soup.": "@key добавил @keyV в суп.",
   "@key added an @key to the soup.": "@key добавил @keyV в суп.",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Your grange display has been judged. Return to Mayor Lewis for the result!": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Hmm... I see you sitting in a plush chair by the fire... you're surrounded by luxury, yet filled with lonely desperation.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Ahh... yes. I see you at the beach. There's some kind of event taking place. You walk up to @key and say something funny... Hmmm... It seems like you two are good friends.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Ahhh... yes. It's @key's birthday. He thought everyone forgot, but then you show up with a nice gift. What a good friend.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Ahhh... yes. It's @key's birthday. She thought everyone forgot, but then you show up with a nice gift. What a good friend.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Hmm... I see you laying on a cot... It looks like a hospital. @key is there to keep you company while you recover. What a nice friend.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Ahh... Indeed. I see you in a room, having a conversation with a man... Oh! It's @key. You seem to be close friends.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Ahh... Indeed. I see you in a room, having a conversation with a lady... Oh! It's @key. You seem to be close friends.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Ahh... I see you in the saloon, surrounded by friends. It doesn't seem like you have any favorites... you're popular with everyone!": "",
+  "Your grange display has been judged. Return to Mayor Lewis for the result!": "Судьи оценили ваш выставочный стенд. Возвращайтесь к мэру Льюису за результатом!",
+  "Hmm... I see you sitting in a plush chair by the fire... you're surrounded by luxury, yet filled with lonely desperation.": "Хмм...Вижу, ты сидишь у камина на мягком креcле... вокруг тебя полно роскоши, но внутри вижу отчаяние.",
+  "Ahh... yes. I see you at the beach. There's some kind of event taking place. You walk up to @key and say something funny... Hmmm... It seems like you two are good friends.": "Ахх... да. Вижу тебя на пляже. Кажется, там происходит какое-то мероприятие. Ты подходишь к @keyD и рассказываешь что-то забавное... Хммм...Кажется, вы очень близкие друзья.",
+  "Ahhh... yes. It's @key's birthday. He thought everyone forgot, but then you show up with a nice gift. What a good friend.": "Аххх... даа. У @keyR день рождения. Он думает, что все про это забыли, но затем появляешься ты и даришь приятный подарок. Какая крепкая дружба.",
+  "Ahhh... yes. It's @key's birthday. She thought everyone forgot, but then you show up with a nice gift. What a good friend.": "Аххх... даа. У @keyR день рождения. Она думает, что все про это забыли, но затем появляешься ты и даришь приятный подарок. Какая крепкая дружба.",
+  "Hmm... I see you laying on a cot... It looks like a hospital. @key is there to keep you company while you recover. What a nice friend.": "Хмм...Вижу, как ты лежишь на койке... Кажется, это в больнице. Пока ты поправляешься, @key приглядывает за тобой. Какая крепкая дружба.",
+  "Ahh... Indeed. I see you in a room, having a conversation with a man... Oh! It's @key. You seem to be close friends.": "Ахх... Конечно. Вижу тебя в комнате, ты болтаешь с парнем... А! Это @key. Кажется, вы близкие друзья.",
+  "Ahh... Indeed. I see you in a room, having a conversation with a lady... Oh! It's @key. You seem to be close friends.": "Ахх... Конечно. Вижу тебя в комнате, ты болтаешь с девушкой... А! Это @key. Кажется, вы близкие друзья.",
+  "Ahh... I see you in the saloon, surrounded by friends. It doesn't seem like you have any favorites... you're popular with everyone!": "Ахх... Вижу тебя в салуне среди друзей. Видимо, из них у тебя нет лучших... тебя любят все!",
   "__comment": "MISTAKE KEY FEMALE",
   "Now I see you, middle-aged, walking through town at dusk. You pause at a window to see a family having dinner. You hang your head and hurry off into the darkness.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Now I see you and @key in a field of grass. You seem happy.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Now I see you and @key in a dimly lit room. You look serious... but not unhappy. Something important must be happening.": "",
+  "Now I see you and @key in a field of grass. You seem happy.": "Сейчас, вижу тебя и @keyV в травяном поле. Кажется, вы счастливы.",
+  "Now I see you and @key in a dimly lit room. You look serious... but not unhappy. Something important must be happening.": "Сейчас, вижу тебя и @keyV в тускло-освещённой комнате. Вы выглядите серьёзными... но не грустными. Должно быть, происходит что-то важное.",
   "__comment": "MISTAKE KEY FEMALE",
   "Ooo... It's dark, and I see you and a certain young man. He looks quite hopeful, and eager to spend time with you. Hmmm... now what's this young man's name? ... I believe it starts with a '@key'.": "",
   "__comment": "MISTAKE KEY FEMALE",
