--- a/TranslationMod/languages/RU/dictionaries/_Utility.json
+++ b/TranslationMod/languages/RU/dictionaries/_Utility.json
@@ -181,24 +181,16 @@
   "Didn't work - @key": "Не работает - @key",
   "__comment": "perpareDayForStardewCelebration",
   "Sorry, @player...": "Прости, player...",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Maybe in 'another life' you'll win...": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "@key won? I'm still shocked...": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Ugh... how in the world did @key win? That's awful.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Hmmph. They'd never give that award to an old timer like me.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Congratulations, @player! I knew you'd win.$h": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "We all knew you were going to win, @player. @key was kind of a jerk.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "Stardew Hero... I'm impressed!$h": "",
+  "Maybe in 'another life' you'll win...": "Может быть в 'другой жизни' ты выиграешь...",
+  "@key won? I'm still shocked...": "@key выиграл? Я в шоке...",
+  "Ugh... how in the world did @key win? That's awful.": "Тьфу.. как же @key победить? Это ужасно.",
+  "Hmmph. They'd never give that award to an old timer like me.": "Хмпф. Они не когда не дадут награду старикам вроде меня.",
+  "Congratulations, @player! I knew you'd win.": "Поздравляю,  @player! Я знала, что ты победишь.",
+  "We all knew you were going to win, @player. @key was kind of a jerk.": "Мы все знали, что ты выиграешь, @player.  @key был придурком.",
+  "Stardew Hero... I'm impressed!": "Стардью герой... я впечатлен!",
   "__comment": "MISTAKE KEY FEMALE",
   "It's such a great honor you received, @player! But you earned it.": "",
-  "__comment": "MISTAKE KEY FEMALE",
-  "I'm so glad @key didn't win.": "",
+  "I'm so glad @key didn't win.": "Я так рада, что @key не выиграл.",
   "You did it, @player!": "Ты сделал это, @player!\n",
   "Good job, dude.": "Хорошая работа, чувак.",
   "Good job, @player.": "Хорошая работа, player.",
