100% before beta test

--- a/MultiLanguage/languages/RU/dictionaries/Items.json
+++ b/MultiLanguage/languages/RU/dictionaries/Items.json
@@ -412,7 +412,7 @@
     "Acorn": "Желудь",
     "Place this on your farm to plant an oak tree.": "Если посадить его на ферме, то из него вырастет дуб.",
     "Maple Seed": "Семя клена",
-    "Place this on your farm to plant a maple tree.": "Если посадить его на ферме, то него вырастет клен.",
+    "Place this on your farm to plant a maple tree.": "Если посадить его на ферме, из него вырастет клен.",
     "Pine Cone": "Сосновая Шишка",
     "Place this on your farm to plant a pine tree.": "Если посадить ее на ферме, то из нее вырастет сосна.",
     "Weeds": "Сорняки",
