--- a/MultiLanguage/languages/RU/dictionaries/_Game1.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Game1.json
@@ -13,7 +13,7 @@
   "Stardew Valley has crashed...": "Стардью Вэлли сломалась...",
   "Please send the error report or a screenshot of this message to @ConcernedApe. (http://stardewvalley.net/contact/)": "Пожалуйста, отправьте отчет об ошибке или скриншот этого сообщения на @ConcernedApe. (http://stardewvalley.net/contact/)",
   "Dwarf King": "Король гномов",
-  "Mr. Lewis": "Г-н Льюис",
+  "Mr. Lewis": "Мр. Льюис",
   "How much do you want to bet? (You have @number club coins).": "Сколько хотите поставить? (У вас @number клубных монет).",
   "Semitones above C3:": "Полутона выше C3:",
   "Drum Sound:": "Звук барабана:",
