--- a/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
+++ b/MultiLanguage/languages/RU/dictionaries/_KeyWords.json
@@ -421,7 +421,7 @@
   "__comment Item Types": "__comment Item Types",
   "Furniture": "Мебель",
   "Artifact": "Артефакт",
-  "Forage": "Корм",
+  "Forage": "Кормовое растение",
   "Flower": "Цветок",
   "Fruit": "Фрукт",
   "Vegetable": "Овощ",
