--- a/MultiLanguage/languages/RU/dictionaries/_Object.json
+++ b/MultiLanguage/languages/RU/dictionaries/_Object.json
@@ -25,17 +25,17 @@
   "Use to see information about your animals.": "Используй для получения информации о твоих животных.",
   "__comment Buff.cs": "__comment Buff.cs",
   "Full": "Полный",
-  "Quenched": "",
+  "Quenched": "Закалка",
   "Goblin's Curse@newline@number Speed@newline@number Defense": "Проклятие гоблина@newline@number Скорость@newline@number Защита",
-  "Slimed@newline@number Speed": "Slimed@newline@number Скорость",
-  "Jinxed@newline@number Defense": "Jinxed@newline@number Защита",
-  "Tipsy@newline@number Speed": "Tipsy@newline@number Скорость",
-  "Spooked@newline@number Attack": "Spooked@newline@number Атака",
-  "Frozen@newline@number Speed": "Frozen@newline@number Скорость",
-  "Warrior Energy@newline@number Attack": "Warrior Energy@newline@number Атака",
-  "Yoba's Blessing@newlineInvincible": "",
-  "Adrenaline Rush@newline@number Speed": "Adrenaline Rush@newline@number Скорость",
-  "Oil of Garlic@newlineYour skin exudes a pungent aroma": "",
+  "Slimed@newline@number Speed": "Слизнявость@newline@number Скорость",
+  "Jinxed@newline@number Defense": "Сглаз@newline@number Защита",
+  "Tipsy@newline@number Speed": "Навеселе@newline@number Скорость",
+  "Spooked@newline@number Attack": "Испуг@newline@number Атака",
+  "Frozen@newline@number Speed": "Заморозка@newline@number Скорость",
+  "Warrior Energy@newline@number Attack": "Энергия война@newline@number Атака",
+  "Yoba's Blessing@newlineInvincible": "Благославение Йобы@newlineНеуязвимость",
+  "Adrenaline Rush@newline@number Speed": "Прилив адреналина@newline@number Скорость",
+  "Oil of Garlic@newlineYour skin exudes a pungent aroma": "Чесночное масло@newlineВаша кожа испускает едкий аромат",
   "Magnetic Radius": "Магнитный Радиус",
   "Source: @key": "Источник: @key",
   "Duration: @number:@number": "Длительность: @number:@number",
@@ -113,7 +113,7 @@
   "__comment Item.cs": "__comment Item.cs",
   "Footwear": "Обувь",
   "__comment MultiplayerUtility.cs": "__comment MultiplayerUtility.cs",
-  "Your grange display has been judged. Return to Mayor Lewis for the result!": "",
+  "Your grange display has been judged. Return to Mayor Lewis for the result!": "Ваш фермерский стенд был оценен. Возвращайтесь к мэру Льюису за результатом!",
   "Can't Build There": "Невозможно построить",
   "@key changed @key name to '@key'": "@key сменил @key имя на '@key'",
   "__comment Options.cs": "__comment Options.cs",
@@ -169,7 +169,7 @@
   "Progress Mode": "Режим прохождения",
   "Endless Mode": "Бесконечный режим",
   "Exit": "Выход",
-  "= Junimo Kart =": "",
+  "= Junimo Kart =": "= Вагонетка Джунимо =",
   "I've scared off 1 crow.": "Я спугнул 1 ворону.",
   "I've scared off @number crows.": "Я спугнул @number ворон.",
   "I haven't encountered any crows yet.": "Пока я не встречал ворон.",
@@ -184,7 +184,7 @@
   "@key Recipe": "Рецепт @keyR",
   "Blueprints for crafting a @key": "Чертеж для крафта @keyR",
   "Blueprints for crafting an @key": "Чертеж для крафта @keyR",
-  "Gunther can tell you more about this if you donate it to the museum.": "Гюнтер может рассказать больше об этом если вы пожертвуете это музею",
+  "Gunther can tell you more about this if you donate it to the museum.": "Гюнтер может рассказать больше об этом, если вы пожертвуете это музею",
   "__comment Honey": "__comment Honey",
   "Wild Honey": "Мёд из диких цветов",
   "Tulip Honey": "Тюльпановый Мёд",
@@ -377,20 +377,20 @@
   "__comment Object/TV.cs": "__comment Object/TV.cs",
   "Weather Report": "Прогноз погоды",
   "Fortune Teller": "Гадалка",
-  "Livin' Off The Land": "",
-  "The Queen Of Sauce": "",
-  "The Queen Of Sauce (Re-run)": "",
+  "Livin' Off The Land": "Фермерская жизнь",
+  "The Queen Of Sauce": "Королева Приправ",
+  "The Queen Of Sauce (Re-run)": "Королева Приправ (Повтор)",
   "(Leave)": "(Выключить)",
   "Select channel:": "Выбрать канал:",
-  "Welcome to \\\"Livin' Off The Land\\\". We're back again with another tip for y'all. Now listen up:": "",
-  "Greetings! It is I, the queen of sauce... here to teach you a new mouth-watering recipe from my secret cookbook. This week's dish...": "Приветствую! С вами королева соусов! И я готова поделиться новым аппетитным рецептом из моей личной кулинарной книги. Блюдо этой недели...",
-  "Ah... I sense that a new viewer has joined us. A young man from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это юноша  из... долины Стардью? Милости просим!",
-  "Ah... I sense that a new viewer has joined us. A young lady from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это девушка из... долины Стардью? Милости просим!",
+  "Welcome to \\\"Livin' Off The Land\\\". We're back again with another tip for y'all. Now listen up:": "Добро пожаловать на программу \\\"Фермерская жизнь\\\". Мы вернулись снова с новым советом для вас. А теперь, послушайте его:",
+  "Greetings! It is I, the queen of sauce... here to teach you a new mouth-watering recipe from my secret cookbook. This week's dish...": "Приветствую! С вами королева приправ! И я готова поделиться новым аппетитным рецептом из моей личной кулинарной книги. Блюдо этой недели...",
+  "Ah... I sense that a new viewer has joined us. A young man from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это юноша  из... Долины Стардью? Милости просим!",
+  "Ah... I sense that a new viewer has joined us. A young lady from... Stardew Valley? Welcome, welcome!": "А-ха... Чувствую, к нам присоединился новый телезритель. Это девушка из... Долины Стардью? Милости просим!",
   "Ah... yes, I can hear the spirits whispering something to me...": "Ах... да, я слышу шепот духов...",
-  "Welcome back to 'Welwick's Oracle'... If you seek hidden knowledge of the future, well you've come to the right place.": "",
-  "Hoo.. I see a glimmer within my scrying orb... A shard of knowledge from the future!": "",
-  "Welcome to Welwick's Oracle... the ONLY show where the voice of the spirits is channeled directly... to YOU.": "",
-  "Welcome to KOZU 5... your number one source for weather, news, and entertainment.^And now, the weather forecast for tomorrow...": "",
+  "Welcome back to 'Welwick's Oracle'... If you seek hidden knowledge of the future, well you've come to the right place.": "Добро пожаловать в 'Оракул Вельвика'... Если вы одержимы сокрытым познанием будущего, вы попали в нужное место.",
+  "Hoo.. I see a glimmer within my scrying orb... A shard of knowledge from the future!": "Ооо .. Я вижу проблеск в шаре предсказаний... Осколок знания из будущего!",
+  "Welcome to Welwick's Oracle... the ONLY show where the voice of the spirits is channeled directly... to YOU.": "Добро пожаловать в Оракул Вельвика... Единственное шоу, где голос духов передается точно... к ТЕБЕ.",
+  "Welcome to KOZU 5... your number one source for weather, news, and entertainment.^And now, the weather forecast for tomorrow...": "Приветствуем на канале KOZU 5... ваш главный источник прогнозов погоды, новостей и развлечений.^А сейчас, прогноз погоды на завтра...",
   "You already know how to cook @key.": "Вы уже умеете готовить @key.",
   "You learned how to cook '@key'!": "Вы научились готовить '@key'!",
   "It's going to be clear and sunny all day.": "Небо будет чистым, а день ясным и солнечным.",
