--- a/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
+++ b/MultiLanguage/languages/RU/dictionaries/_TBinStrings.json
@@ -16,7 +16,8 @@
   "Doesn't seem like Jas uses this much.": "Вряд ли Джес часто этим пользуется.",
   "Mmm.... microwave pizza.": "М-м-м... Пицца из микроволновки.",
   "Looks like someone was chopping vegetables but never finished.": "Кто-то шинковал овощи, но так и не закончил.",
-  "Why are you looking through my trash can?$s/Mostly empty pizza cartons.": "Зачем ты роешься в моём мусорнике?$s/Одни коробки из-под пиццы.",
+  "Why are you looking through my trash can?": "Зачем ты роешься в моём мусорнике?",
+  "Mostly empty pizza cartons.": "Одни коробки из-под пиццы.",
   "__comment ArchaeologyHouse.tbin": "__comment ArchaeologyHouse.tbin",
   "A History of The Gotoro Empire": "\"История Империи Готоро\"",
   "Is War With The Gotoro Empire Necessary? A Unique Perspective by P.W.Kranzhauer": "\"Зачем мы воюем с Империей Готоро? Особый взгляд П. В. Кранзхауэра\"",
@@ -26,7 +27,8 @@
   "Star Atlas": "Карта звёздного неба",
   "It's ragged but still cute.": "Изношенный, но всё равно милый.",
   "The Friendly Little Slime": "\"Добрый маленький слизень\"",
-  "Let's visit the farm. The chickens go bock bock. The pigs go snort snort. The goats go mah mah.#The ducks go ack ack. The rabbits go sniff sniff. The cows go ooh ooh.": "Заглянем на ферму: куры квокчут, свиньи хрюкают, козы мекают.#Утки крякают, кролики фыркают, коровы мычат...",
+  "Let's visit the farm. The chickens go bock bock. The pigs go snort snort. The goats go mah mah.": "Заглянем на ферму: куры квокчут, свиньи хрюкают, козы мекают.",
+  "The ducks go ack ack. The rabbits go sniff sniff. The cows go ooh ooh.": "Утки крякают, кролики фыркают, коровы мычат...",
   "__comment BathHouse_MensLocker.tbin": "__comment BathHouse_MensLocker.tbin",
   "This locker smells awful.": "Ну и вонь!",
   "Trying to shower with your clothes on?": "В одежде мыться собрались?",
@@ -214,9 +216,10 @@
   "The radio is set to the oldies station.": "Радио настроено на станцию ретро-музыки.",
   "'Pro Gridball Season 44: Stats and Standings'": "\"Гридбол - 44-й сезон: Турнирные таблицы и статистика\"",
   "'Dealing With Loss'": "\"Как смириться с утратой\"",
-  "'Mega Muscles' magazine": "Журнал \"Мускулист\"",
+  "'Mega Muscles' magazine": "Журнал \"Мега Мускулы\"",
   "It's a thirty pound weight.": "Гиря на 15 кг.",
-  "Uh.. What are you doing?$s/There's a bunch of protein bar wrappers.": "Эу... Ты чего делаешь?$s/Куча обёрток от протеиновых батончиков.",
+  "Uh.. What are you doing?": "Эу... Ты чего делаешь?",
+  "There's a bunch of protein bar wrappers.": "Куча обёрток от протеиновых батончиков.",
   "You peek into Alex's drawer. There's clothes, hair gel, and a box of gridball trading cards.": "Вы изучаете ящик Алекса. Тут одежда, гель для волос и коробка с гридбольными карточками.",
   "It's Alex's gridball helmet. Looks like he keeps it polished.": "Шлем для гридбола. Алекс его регулярно полирует.",
   "It's a gridball.": "Мяч для игры в гридбол.",
@@ -247,7 +250,8 @@
   "It's set to the news station.": "Настроен на канал новостей.",
   "Guitar picks and skateboard wheels.": "Медиаторы и колёса от скейта.",
   "There's a bunch of extra strong hair gel in here.": "Куча баночек с экстра-сильным гелем.",
-  "Hey, don't look in there!$a/Looks like Sam cleans his trash bin regularly.": "Эй, не лазь там!$a/Похоже, Сэм регулярно выносит мусор.",
+  "Hey, don't look in there!": "Эй, не лазь там!",
+  "Looks like Sam cleans his trash bin regularly.": "Похоже, Сэм регулярно выносит мусор.",
   "There's a bunch of skateboarding magazines.": "Стопка журналов по скейтбордингу.",
   "'UFO Mysteries'": "\"Тайны НЛО\"",
   "Sam's electric guitar. It has a pair of active pickups and a whammy bar.": "Электрогитара Сэма. У неё два активных регулятора и тремоло-система.",
@@ -279,7 +283,8 @@
   "__comment SeedShop.tbin": "__comment SeedShop.tbin",
   "'11 Solo Sonatas For The Wooden Flute'": "\"11 сольных сонат для деревянной флейты\"",
   "David the Guinea Pig": "Морская свинка Дэвид",
-  "Hey, don't even think about it! That's private!$a/It's full of clothes... wait. There's a sword hidden under the clothes.": "Эй, даже не думай! Там личные вещи!$a/Тут полно одежды... погодите-ка: под одеждой спрятан настоящий меч!",
+  "Hey, don't even think about it! That's private!": "Эй, даже не думай! Там личные вещи!",
+  "It's full of clothes... wait. There's a sword hidden under the clothes.": "Тут полно одежды... погодите-ка: под одеждой спрятан настоящий меч!",
   "'The Enduring Value Of Small Business'": "\"Непреходящее значение малого бизнеса\"",
   "'Parenting 101:Surviving The Teenage Years'": "\"101 совет по воспитанию: Переживаем подростковый период\"",
   "It's loaded with fresh veggies.": "Тут полно свежих овощей.",
